--- a/Code/style.css
+++ b/Code/style.css
@@ -5,3 +5,81 @@
     text-decoration: none;
     
 }
+
+.header{
+    width: 375px;
+    height: 200px;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+    position: relative;
+    background-color: aqua;
+
+}
+
+.navbar{
+    width: 100px;
+    height: 200px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: column;
+    position: absolute;
+    left:137px;
+    background-color:blue ;
+
+}
+
+.button{
+    width: 75px;
+    height: 50px;
+    padding: 15px;
+    text-align: center;
+    background-color: aquamarine;
+
+}
+
+.container{
+    width: 375px;
+    height:1000px;
+    display: flex;
+    justify-content:center;
+    align-items: center;
+    flex-direction: column;
+    background-color: grey;
+
+}
+
+.card1{ /*height vervangen met fit-content waarneer de grid af is*/
+    margin-top: 20px;
+    width:300px ;
+    height: 500px; 
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    background-color: aqua;
+
+}
+
+.searchbar{
+    width: 300px;
+    height: 75px;
+    background-color: blue;
+
+}
+
+.grid{
+    height: 425px;
+    width: 300px;
+    background-color: blueviolet;
+
+}
+
+.card2{ 
+    width:300px ;
+    height: 500px;
+    margin-top: 20px;
+    background-color: blue;
+
+}
