--- a/Code/media.css
+++ b/Code/media.css
@@ -29,7 +29,7 @@
 
     .card1{
         width:1000px ;
-        height: 500px;
+        height: fit-content;
         margin-top: 50px;
         margin-left: 50px;
         order: 2;
@@ -42,7 +42,8 @@
     }
 
     .grid{
-        width: 1000px;
+        grid-template-columns:repeat(3, 300px[col-start]);
+        grid-template-rows:repeat(5, 200px[col-start]) ;
 
     }
     
@@ -50,7 +51,13 @@
         width:300px ;
         height: 500px;
         margin-top: 50px;
+        align-items: center;
+        justify-content: flex-start;
+        top: 20px;
+        bottom: 0px;
         order: 1;
         
     }
+
+
 }
