--- a/Code/style.css
+++ b/Code/style.css
@@ -50,7 +50,7 @@
 
 }
 
-.card1{ /*height vervangen met fit-content waarneer de grid af is*/
+.card1{ 
     margin-top: 20px;
     width:300px ;
     height: fit-content; 
@@ -59,12 +59,16 @@
     justify-content: flex-start;
     align-items: center;
     background-color: aqua;
+    margin: 20px;
 
 }
 
 .searchbar{
     width: 300px;
-    height: 75px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     background-color: blue;
 
 }
@@ -72,18 +76,114 @@
 .grid{
   display: grid;
   grid-template-columns:repeat(2, 150px[col-start]);
-  grid-template-rows:repeat(8, 100px[col-start]) ;
+  grid-template-rows:repeat(8, 130px[col-start]) ;
 
 }
 
 .card2{ 
     width:300px ;
-    height: 100px;
+    height: 60px;
     display: flex;
     align-items: center;
     justify-content: center;
     position: sticky;
-    bottom: 20px;
+    top: 250px;
+    bottom: 0px;
     background-color: blue;
+    
 
+}
+
+p{
+    margin-top: 2px;
+    margin-bottom: 2px;
+}
+
+#add{
+    width: 10px;
+    
+}
+
+#product{
+    width:70px;
+}
+
+#remove{
+    width:10px;
+    
+}
+
+.item1{
+    text-align: center;
+    padding-top: 20px;
+}
+
+.item2{
+    text-align: center;
+    padding-top: 20px;
+}
+
+.item3{
+    text-align: center;
+    padding-top: 20px;
+}
+
+.item4{
+    text-align: center;
+    padding-top: 20px;
+}
+
+.item5{
+    text-align: center;
+    padding-top: 20px;
+}
+
+.item6{
+    text-align: center;
+    padding-top: 20px;
+}
+
+.item7{
+    text-align: center;
+    padding-top: 20px;
+}
+
+.item8{
+    text-align: center;
+    padding-top: 20px;
+}
+
+.item9{
+    text-align: center;
+    padding-top: 20px;
+}
+
+.item10{
+    text-align: center;
+    padding-top: 20px;
+}
+
+.item11{
+    text-align: center;
+    padding-top: 20px;
+}
+
+.item12{
+    text-align: center;
+    padding-top: 20px;
+}
+
+.item13{
+    text-align: center;
+    padding-top: 20px;
+}
+
+.item14{
+    text-align: center;
+    padding-top: 20px;
+}
+
+.item15{
+    text-align: center;
+    padding-top: 20px;
 }
