--- a/Code/style.css
+++ b/Code/style.css
@@ -128,6 +128,7 @@ input {
 
 }
 
+
 p{
     margin-top: 2px;
     margin-bottom: 2px;
@@ -140,6 +141,7 @@ p{
 
 .product{
     width:70px;
+
 }
 
 .remove{
@@ -147,82 +149,16 @@ p{
     
 }
 
-.item1{
+.item1, .item2, .item3, .item4, .item5, .item6, .item7, .item8, .item9, .item10, .item11, .item12, .item13, .item14, .item15{
     text-align: center;
     padding-top: 20px;
+
 }
 
-.item2{
-    text-align: center;
-    padding-top: 20px;
-}
 
-.item3{
-    text-align: center;
-    padding-top: 20px;
-}
-
-.item4{
-    text-align: center;
-    padding-top: 20px;
-}
-
-.item5{
-    text-align: center;
-    padding-top: 20px;
-}
-
-.item6{
-    text-align: center;
-    padding-top: 20px;
-}
-
-.item7{
-    text-align: center;
-    padding-top: 20px;
-}
-
-.item8{
-    text-align: center;
-    padding-top: 20px;
-}
-
-.item9{
-    text-align: center;
-    padding-top: 20px;
-}
-
-.item10{
-    text-align: center;
-    padding-top: 20px;
-}
-
-.item11{
-    text-align: center;
-    padding-top: 20px;
-}
-
-.item12{
-    text-align: center;
-    padding-top: 20px;
-}
-
-.item13{
-    text-align: center;
-    padding-top: 20px;
-}
-
-.item14{
-    text-align: center;
-    padding-top: 20px;
-}
-
-.item15{
-    text-align: center;
-    padding-top: 20px;
-}
 
 /* hidden class om elementen te verstoppen */
 .hidden-element{
     display: none;
+
 }
